--- a/cgi-bin/form/index.html
+++ b/cgi-bin/form/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css" >
     <title>Form Submission</title>
 </head>
 
@@ -12,18 +13,10 @@
     <form action="./script.py" method="POST" enctype="application/x-www-form-urlencoded">
 
 
-	<label for="x">X:</label>
-	<input type="text" id="x" name="x" required><br><br>
+	<input type="hidden" id="x" name="x" value="x" required><br><br>
 
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br><br>
-
-        <label>How are you feeling?</label><br>
-        <input type="radio" id="happy" name="status" value="happy">
-        <label for="happy">Happy</label><br>
-
-        <input type="radio" id="sad" name="status" value="sad">
-        <label for="sad">Sad</label><br><br>
 
         <label for="age">Age:</label>
         <input type="number" id="age" name="age" required><br><br>
