--- a/cgi-bin/form/res.html
+++ b/cgi-bin/form/res.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CGI Script Response</title>
+	<link ref="stylesheet" href="res.css" >
+	<title>CGI Script Response</title>
 </head>
 <body style='text-align:center;'>
     <h1 style='color: green;'>waizi's</h1>
