--- a/cgi-bin/file_upload/index.html
+++ b/cgi-bin/file_upload/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="container">
         <h1>Upload File</h1>
-        <form action="./upload.py" method="POST" enctype="multipart/form-data">
+        <form action="upload.py" method="POST" enctype="multipart/form-data">
 		<input type="hidden" id="x" name="x" value="x" required><br><br>
 		<label for="file">Choose a file:</label>
-		<input type="file" id="file" name="file" required><br><br>
+		<p><input type="file" name="file" required></p><br><br>
 		<input type="submit" value="Upload">
         </form>
     </div>
