--- a/cgi-bin/file_upload/index.html
+++ b/cgi-bin/file_upload/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Upload File</h1>
         <form action="upload.py" method="POST" enctype="multipart/form-data">
-		<input type="hidden" id="x" name="x" value="x" required><br><br>
+		<input type="hidden" name="x" value="x" required><br><br>
 		<label for="file">Choose a file:</label>
 		<p><input type="file" name="file" required></p><br><br>
 		<input type="submit" value="Upload">
